2008-01-26  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix crash with invalid invocation
	  expressions, fixes bug 511823

2008-01-26  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala: fix crash when using type without
	  copy function, fixes bug 511821

2008-01-24  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala, vala/valadatatype.vala,
	  vala/valainterfacewriter.vala, vala/valanulltype.vala,
	  vala/valasemanticanalyzer.vala, vala/valasymbolresolver.vala,
	  gobject/valaccodeassignmentbinding.vala,
	  gobject/valaccodegenerator.vala,
	  gobject/valaccodegeneratorinvocationexpression.vala,
	  gobject/valaccodegeneratormethod.vala,
	  gobject/valaccodegeneratorsignal.vala: use ArrayType class

2008-01-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/parser.y: allow constant declarations in structs

2008-01-24  Raffaele Sandrini  <raffaele@sandrini.ch>

	* vala/parser.y: report initializers in struct fields as error

2008-01-24  Jürg Billeter  <j@bitron.ch>

	* gen-project/valaprojectgenerator.vala: use valac -C in generated
	  Makefile.am and fix GtkTextBuffer.get_text call in generated source
	  code

2008-01-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacfgbuilder.vala: build control flow graph for switch
	  statements, report missing break statements at end of switch
	  sections, fixes bug 511644

	* tests/statements-selection.vala: test switch checks

2008-01-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-pixbuf-2.0/: fix gdk_pixdata_serialize binding

	* vapi/gdk-pixbuf-2.0.vapi: regenerated

2008-01-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gdk-pixbuf-2.0/: fix GdkPixdata binding

	* vapi/gdk-pixbuf-2.0.vapi: regenerated

2008-01-23  Jürg Billeter  <j@bitron.ch>

	* vala/valaintegertype.vala: override copy method

2008-01-23  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-base-0.10/,
	  vapi/packages/gstreamer-controller-0.10/,
	  vapi/packages/gstreamer-dataprotocol-0.10/,